--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/node_modules
+front-end/node_modules
 /.venv
 /.env
 /.idea
