--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 front-end/node_modules
-/.venv
-/.env
-/.idea
-/__pycache__
+back-end/.venv
+back-end/.env
+front-end/.idea
+back-end/__pycache__
 *.log
 
 # dependencies
-/node_modules
 /.pnp
 .pnp.js
 
