--- a/.gitignore
+++ b/.gitignore
@@ -12,23 +12,5 @@ back-end/__pycache__
 back-end/routes/__pycache__
 *.log
 
-# dependencies
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+#Root
+features.txt
