add ingredient search using new api & populate new model

--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,18 +1,17 @@
-# Base image
 FROM python:3.11-slim
 
-# Set the working directory inside the container
-WORKDIR /app
+# Install timezone database
+RUN apt-get update && \
+    apt-get install -y tzdata && \
+    rm -rf /var/lib/apt/lists/*
 
-# Copy the requirements file and install dependencies
+# Set timezone
+ENV TZ=UTC
+
+WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
-
-# Copy the rest of the app’s code
 COPY . .
 
-# Expose the port FastAPI will run on
 EXPOSE 8000
-
-# Command to run FastAPI
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
