--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
       - "3000:3000"
     volumes:
       - ./front-end:/app
+      - /app/node_modules
     environment:
-      - CHOKIDAR_USEPOLLING=true  # Ensures React hot-reload works in Docker
+      - CHOKIDAR_USEPOLLING=true
+      - TZ=UTC
     depends_on:
       - backend
 
@@ -20,6 +22,7 @@ services:
       - ./back-end:/app
     environment:
       - MONGO_URL=mongodb://mongodb:27017
+      - TZ=UTC
     env_file:
       - ./back-end/.env
     depends_on:
@@ -31,6 +34,8 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    environment:
+      - TZ=UTC
 
 volumes:
   mongo_data:
