--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,11 +8,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "axios": "^1.8.2",
+    "eslint-config-react-app": "^7.0.1",
+    "lodash": "^4.17.21",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^4.0.12",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +45,6 @@
     ]
   },
   "devDependencies": {
-    "webpack": "^4.42.0"
+    "webpack": "5.94.0"
   }
 }
