--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "eslint-config-react-app": "^7.0.1",
     "lodash": "^4.17.21",
     "postcss": "^8.5.3",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
